# bot-dlya-stihov

./: .env.example  .gitignore  .pre-commit-config.yaml  PLAN.md  README.md  SYSTEM PROMPT.md  alembic.ini  docker-compose.yml  pyproject.toml  run_bot.bat  run_web.bat  run_worker.bat  Задача 11.md  Задача 12.md  Задача 14.md  Задача 3.md  Задача 5.md  Задача 6.md  Задача 7.md  Задача 8.md  Задача 9.md  Задача редизайна админ панели.md  РоудМэп.md
app/application/dto/: schemas.py
app/application/services/: content_policy.py  prompt_builder.py
app/application/use_cases/: create_order.py  handle_yookassa_webhook.py  start_payment.py
app/bot/: main.py
app/bot/fsm/: states.py
app/bot/keyboards/: common.py  payments.py
app/bot/routers/: orders.py  poem_flow.py  start.py
app/bot/texts/: ru.py
app/domain/: enums.py
app/infra/ai/: base.py  gemini.py  openai.py  speechkit.py  test_provider.py  yandex_gpt.py
app/infra/config/: logging.py  settings.py
app/infra/db/: models.py  session.py
app/infra/payments/: yookassa.py
app/infra/queue/: celery_app.py  tasks.py
app/web/: auth.py  deps.py  main.py  texts.py
docker/: bot.Dockerfile  web.Dockerfile  worker.Dockerfile
plans/: admin_redesign_plan.md  provider_migration_plan.md  slider_visibility_improvement.md  text_update_tz.md
scripts/: check_db.py  check_provider_config.py  debug_providers.py  diag_bot.py  diag_user_order.py  reproduce_500.py  seed_db.py  test_multiple_providers.py  test_run.py  update_gemini_config.py  verify_prices.py  verify_task_11.py
tests/: test_acceptance_db.py
(+25 files in other folders)
