[tool.poetry]
name = "creative-funnel-bot"
version = "0.1.0"
description = "Telegram-бот + Web Admin с оплатой через ЮKassa, фоновой обработкой задач и AI интеграциями"
authors = ["Admin <admin@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.10"
fastapi = "^0.111"
uvicorn = "^0.30"
sqlalchemy = "^2.0"
asyncpg = "^0.29"
alembic = "^1.13"
pydantic = "^2.7"
pydantic-settings = "^2.3"
celery = "^5.4"
redis = "^5.0"
jinja2 = "^3.1"
python-multipart = "^0.0.9"
aiohttp = "^3.9"
structlog = "^24.2"
yookassa = "^3.3"
boto3 = "^1.34"
python-json-logger = "^2.0"
google-generativeai = "^0.5"

[tool.poetry.group.dev.dependencies]
black = "^24.4"
ruff = "^0.4"
isort = "^5.13"
mypy = "^1.10"
pre-commit = "^3.7"
pytest = "^8.2"
pytest-asyncio = "^0.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]